# src/main/java/com/fooddelivery/reviews/enums/EntityType.java
@@ -1,7 +1,0 @@
-package com.fooddelivery.reviews.enums;
-
-public enum EntityType {
-    RESTAURANT,
-    DRIVER,
-    PRODUCT
-}
